--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -1,13 +1,11 @@
-/* 10px = 0.75vw */
-
 .home_container h1 {
-    padding-bottom: 5px;
+    padding-bottom: 0.5rem;
 }
 
 .home_container {
     display: flex;
     flex-flow: row wrap;
-    min-width: 560px;
+    min-width: 56rem;
     width: 50%;
     margin: auto;
     text-align: justify;
@@ -19,7 +17,7 @@
     background-image: url('/images/2.jpg');
     background-repeat: no-repeat;
     background-position: center;
-    padding: 100px;
+    padding: 10rem;
     width: 100%;
     background-size: 100%;
     position: absolute;
@@ -36,7 +34,7 @@
 .home_container .info {
     padding: 1vw 1vw;
     color: white;
-    text-shadow: 1px 0px 4px #000000;
+    text-shadow: 0.1rem 0rem 0.4rem #000000;
     font-family: Righteous;
     text-align: left;
     flex: 2 60%;
@@ -47,24 +45,24 @@
 .home_container .intro {
     flex: 3 50%;
     max-width: 50%;
-    padding: 20px;
+    padding: 2.0rem;
     z-index: 1;
 }
 
 .home_container .intro div {
-    padding: 15px;
+    padding: 1.5rem;
     background-color: rgb(255, 255, 255);
 }
 
 .home_container .description {
     flex: 4 50%;
     max-width: 50%;
-    padding: 20px;
+    padding: 2.0rem;
     z-index: 1;
 }
 
 .home_container .description div{
-    padding: 15px;
+    padding: 1.5rem;
     background-color: rgb(255, 255, 255);
 }
 
@@ -72,29 +70,21 @@
     margin: auto;
     background-color: white;
     border-radius: 50%;
-    box-shadow: 1px 6px 7px;
+    box-shadow: 0.1rem 0.6rem 0.7rem;
     transition: all .2s ease-in-out;
 }
 
-
 @media (min-width: 1px) {
     .home_container .image_wrapper {
-        width: 180px;
-        height: 180px;
-    }
-}
-
-@media (min-width: 1070px) {
-    .home_container .image_wrapper {
-        width: 200px;
-        height: 200px;
+        width: 20rem;
+        height: 20rem;
     }
 }
 
 .home_container .image_wrapper img {
     width:100%;
     height:100%;
-    padding: 0.375vw;
+    padding: 0.375rem;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -108,4 +98,5 @@
     margin: auto;
     width: 100%;
     height:70vh;
+    padding-top: 20vh;
 }
