--- a/client/src/css/redirect.css
+++ b/client/src/css/redirect.css
@@ -1,21 +1,16 @@
 .back_img {
     height: 70vh;    
     width: 100%;
-    background-image: linear-gradient(to right top, rgba(96, 218, 255, 0.3),
-    rgba(75, 156, 221, 0.0)), url('/images/cat-nature.jpg');
+    background-image: linear-gradient(to left top, rgba(96, 218, 255, 0.0),
+    rgba(43, 148, 235, 0.5)), url('/images/cat-nature.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
 }
 
-/* .back_img .block {
-    position: absolute;
-    top: 10px;
-} */
-
 .back_img .block {
     color: #ffffff;
-    text-shadow: 0px 1px 1px #494949;
+    text-shadow: 0.1rem 0.1rem 0.1rem #000000;
     font-size: 1.6rem;
 }
 
@@ -27,4 +22,18 @@
     letter-spacing: 1.2rem;    
     line-height: 1.3;
     padding-top: 20vh;
+}
+
+.back_img .block .desc{
+    text-align: center;
+    padding-top: 5vh;
+}
+
+.back_img .block .desc a {
+    color: #a9c4ff;
+    text-decoration: underline;
+}
+
+.back_img .block .desc a:hover {
+    color: #53afff;
 }
