--- a/client/src/css/404.css
+++ b/client/src/css/404.css
@@ -9,8 +9,8 @@
     margin: auto;
     transition: all .2s ease-in-out;
     border-radius: 50%;
-    height: 270px;    
-    width: 270px;     
+    height: 27rem;    
+    width: 27rem;     
     cursor: pointer;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .not_found_wrapper p {
-    padding: 10px;
+    padding: 1rem;
     font-family: 'Righteous';
     font-size: 2.4rem;
 }
