--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -68,10 +68,45 @@
 
 .home_container .image_wrapper {
     margin: auto;
-    background-color: white;
+    background-color: white;    
+    padding-top: 0.5rem;
+    text-align:center;
     border-radius: 50%;
-    box-shadow: 0.1rem 0.6rem 0.7rem;
+    box-shadow: 0.1rem 0.3rem 1rem;
     transition: all .2s ease-in-out;
+}
+
+.imageup_wrapper {
+    text-align:center;
+}
+
+.imageup_wrapper2 {
+    width: 25rem;
+    height: 25rem;
+    border-radius: 50%;
+    display:inline-block;
+    position: relative;
+}
+
+.imageup_wrapper .img {
+    width: 25rem;
+    height: 25rem;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.imageup_wrapper .img2 {
+    width: 25rem;
+    height: 25rem;
+    border: 1rem solid rgb(181, 213, 255);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 @media (min-width: 1px) {
@@ -81,10 +116,13 @@
     }
 }
 
-.home_container .image_wrapper img {
-    width:100%;
-    height:100%;
-    padding: 0.375rem;
+.home_container .image_wrapper .img {
+    width: 19rem;
+    height: 19rem;
+    display:inline-block;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -99,4 +137,26 @@
     width: 100%;
     height:70vh;
     padding-top: 20vh;
+}
+
+.plus {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 9rem;    
+    color: #ffffff;
+    font-size: 10rem;
+    line-height: 60%;
+    font-weight: bold;
+    transition: 0.3s;
+    text-shadow: 0.1rem 0.1rem 1rem #2a2a2a;
+}
+  
+.plus:hover,
+.plus:focus {
+color: rgb(143, 143, 143);
+text-decoration: none;
+cursor: pointer;
 }
