--- a/client/src/css/redirect.css
+++ b/client/src/css/redirect.css
@@ -1,5 +1,7 @@
 .back_img {
-    height: 70vh;    
+    min-height: 55rem;
+    height: 70vh;
+    min-width: 50rem;
     width: 100%;
     background-image: linear-gradient(to left top, rgba(96, 218, 255, 0.0),
     rgba(43, 148, 235, 0.5)), url('/images/cat-nature.jpg');
@@ -11,7 +13,12 @@
 .back_img .block {
     color: #ffffff;
     text-shadow: 0.1rem 0.1rem 0.1rem #000000;
-    font-size: 1.6rem;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 14rem;
 }
 
 .back_img .block .main_title{
@@ -21,7 +28,6 @@
     font-size: 6.0rem;
     letter-spacing: 1.2rem;    
     line-height: 1.3;
-    padding-top: 20vh;
 }
 
 .back_img .block .desc{
@@ -53,3 +59,6 @@
     font-family: 'Righteous';
 }
 
+.desc p {
+    margin: 0;
+}
